examples/test/testpolicy18210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18210
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key42: value40
      key47: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value26
          key21: value41
      podSelector:
        matchLabels:
          key30: value20
          key44: value8
          key28: value10
